--- a/IndexLG.html
+++ b/IndexLG.html
@@ -19,15 +19,17 @@
         <a href="#products" class="text-gray-700 hover:text-pink-600 font-medium transition whitespace-nowrap">Products</a>
         <a href="#features" class="text-gray-700 hover:text-pink-600 font-medium transition whitespace-nowrap">Features</a>
         <a href="#contact" class="text-gray-700 hover:text-pink-600 font-medium transition whitespace-nowrap">Contact</a>
-      </nav>
-            <a href="Login.html">
-            <button id="openLogin" onclick="openLogin()" class=" font-medium rounded-lg text-2xl px-6 py-2.5 text-center ml-5 bg-orange-50 text-pink-500 hover:bg-red-300 hover:text-red-900  " style="font-family: 'Italianno' , cursive;"" type="button">
+      </nav> 
+      <div class="flex space-x-4">
+            <a href="Login.html" >
+            <button id="openLogin" onclick="openLogin()" class=" font-medium rounded-lg text-2xl px-6 py-2.5 text-center ml-100 bg-orange-50 text-pink-500 hover:bg-red-300 hover:text-red-900  " style="font-family: 'Italianno' , cursive;"" type="button">
                 Login
             </button></a>
             <a href="Register.html">
-            <button id="openRegister" onclick="openRegister()" class=" font-medium rounded-lg text-2xl px-5 py-2.5 text-center mr-4 bg-orange-50 text-pink-500 hover:bg-red-300 hover:text-red-900 " style="font-family: 'Italianno' , cursive;"" type="button">
+            <button id="openRegister" onclick="openRegister()" class=" font-medium rounded-lg text-2xl px-5 py-2.5 text-center ml-100  bg-orange-50 text-pink-500 hover:bg-red-300 hover:text-red-900 " style="font-family: 'Italianno' , cursive;"" type="button">
                 Register
             </button></a>
+         </div> 
     </header>
 <br>
 <br>
