--- a/Login.html
+++ b/Login.html
@@ -14,7 +14,7 @@
     <div class="fixed top-0 left-0 right-0 bg-black opacity-95 w-screen h-screen flex items-center justify-center" id="modalLogin">
         <div class="bg-pink-300 rounded-4xl shadow-md p-8 w-130 h-130 flex">
             <div class="ml-19 ">
-                <a href="IndexLG.html">
+                <a href="Index.html">
                 <button class="absolute top-4 right-4 text-pink-500 cursor-pointer" id="closeModal" onclick="closeLogin()" >
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="cursor-pointer">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/>
