--- a/Profile.html
+++ b/Profile.html
@@ -76,7 +76,7 @@
       style="font-family: 'Italianno' , cursive;">
         Edit Profile
       </button>
-      <a href="IndexLG.html">
+      <a href="Index.html">
       <button
         type="button"
         id="logoutButton"
